--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,11 @@
     "emailvalid",
     "emailvalidation",
     "emailvalide",
+    "ison",
     "myalert",
+    "myform",
+    "myusermanager",
+    "passwordvalide",
     "phonevalid",
     "phonevalidation",
     "phonevalide",
