feat: add custom template filters for arithmetic operations and integrate iziToast for notifications

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,30 @@
 {
   "cSpell.words": [
     "alerthandle",
+    "allcohorts",
     "csrfmiddlewaretoken",
     "Emaill",
     "emailvalid",
     "emailvalidation",
     "emailvalide",
+    "Groupscohort",
     "ison",
+    "izitoast",
     "myalert",
+    "mycohorts",
     "myform",
     "myusermanager",
+    "Ourcommunity",
     "passwordvalide",
     "phonevalid",
     "phonevalidation",
     "phonevalide",
+    "Profieupdate",
+    "profileview",
+    "Profileviews",
+    "Recapclassroom",
     "swal",
+    "Taskscollection",
     "Usernamevalidation",
     "usernamevalide",
     "uservalidation"
