feat: implement task creation functionality and add create_task template

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,20 +2,36 @@
   "cSpell.words": [
     "alerthandle",
     "allcohorts",
+    "aproved",
+    "Assigment",
+    "assigmentrejected",
+    "assignreject",
+    "bodyform",
+    "caculations",
     "collwction",
+    "credentail",
     "csrfmiddlewaretoken",
+    "describedby",
     "Emaill",
+    "emailssending",
     "emailvalid",
     "emailvalidation",
     "emailvalide",
     "Groupscohort",
     "ison",
     "izitoast",
+    "Livesesion",
     "myalert",
+    "myapproved",
+    "myassigment",
     "mycohorts",
     "myform",
+    "myprofile",
+    "myscore",
+    "mystatus",
     "myusermanager",
     "Ourcommunity",
+    "Ourteam",
     "passwordvalide",
     "phonevalid",
     "phonevalidation",
@@ -23,9 +39,17 @@
     "Profieupdate",
     "profileview",
     "Profileviews",
+    "reating",
     "Recapclassroom",
+    "Recapsesion",
+    "rejectassigment",
+    "skylinenow",
+    "socail",
+    "socila",
     "swal",
+    "taskimage",
     "Taskscollection",
+    "uplaod",
     "Usernamevalidation",
     "usernamevalide",
     "uservalidation"
