Add forms and unauthorized page template
- Created a TaskForm class in forms.py for handling Task model forms, excluding 'student' and 'status' fields.
- Added an unauthorized.html template for displaying a 403 error page with a user-friendly message and a button to return to the dashboard.
- Included necessary CSS styles and Bootstrap for improved UI in the unauthorized page.
- Added binary files for images and icons used in the application.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,10 @@
     "bodyform",
     "caculations",
     "collwction",
+    "createtask",
     "credentail",
     "csrfmiddlewaretoken",
+    "datials",
     "describedby",
     "Emaill",
     "emailssending",
@@ -46,6 +48,7 @@
     "skylinenow",
     "socail",
     "socila",
+    "submitassigment",
     "swal",
     "taskimage",
     "Taskscollection",
