Add new task dashboard template with user profile and task management features

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
     "emailvalid",
     "emailvalidation",
     "emailvalide",
+    "endwith",
     "Groupscohort",
     "ison",
     "izitoast",
@@ -32,6 +33,7 @@
     "myscore",
     "mystatus",
     "myusermanager",
+    "newtask",
     "Ourcommunity",
     "Ourteam",
     "passwordvalide",
