--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,7 @@
     "swal",
     "taskimage",
     "Taskscollection",
+    "truncatechars",
     "uplaod",
     "Usernamevalidation",
     "usernamevalide",
