feat: enhance task submission process with progress indicators and error handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,7 @@
     "Profieupdate",
     "profileview",
     "Profileviews",
+    "progresscontainer",
     "reating",
     "Recapclassroom",
     "Recapsesion",
